GET events/{eventID}でhostIDを返すように
