# docs/openapi.yml
@@ -281,6 +281,9 @@ components:
           type: string
         description:
           type: string
+        hostID:
+          type: string
+          description: traQ ID
         isConfirmed:
           type: boolean
         date:
@@ -293,6 +296,7 @@ components:
         - id
         - title
         - description
+        - hostID
         - isConfirmed
         - dateOptions
     DateTimeResponse:
